# FriendlyFace

./: CMakeLists.txt  README.md  config.ini  install.sh  main.c  main.cpp
include/: display.h  display.hpp  graphics.h  graphics.hpp  timer.h  utility.h
src/: display.c  display.cpp  graphics.c  graphics.cpp  timer.c  timer.cpp  utility.c  utility.cpp
